ecmascript/parser/tests/test262-error-references/fail/dc14ac854168468f.js.stderr
error: Cannot assign to this
 --> $DIR/tests/test262-parser/fail/dc14ac854168468f.js:1:2
  |
1 | (({a})=0);
  |  ^^^^^

